Revise index.html for improved layout and functionality
Updated the HTML content and structure, including new buttons and sections for enhanced user interaction and information presentation.

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         </div>
     </nav>
 
-    <section class="max-w-7xl mx-auto px-8 pt-24 pb-32 text-center">
-        <h1 class="text-5xl md:text-7xl font-extrabold mb-6">Stop Fighting Spreadsheets. <br><span class="gradient-text">Start Scaling Your Business.</span></h1>
-        <p class="text-xl text-slate-400 max-w-3xl mx-auto mb-10">We build high-performance, custom Excel applications and Google Sheets automation for the MSME and Corporate sectors. Expertly crafted in India for the Global stage.</p>
-        <div class="flex flex-col md:flex-row justify-center space-y-4 md:space-y-0 md:space-x-6">
-            <button class="px-8 py-4 bg-amber-500 text-black rounded-lg font-bold text-lg hover:scale-105 transition">View Case Studies</button>
-            <button class="px-8 py-4 glass text-white rounded-lg font-bold text-lg hover:bg-white hover:text-black transition">Book Free Consultation</button>
-        </div>
-    </section>
+<section class="max-w-7xl mx-auto px-8 pt-24 pb-32 text-center">
+    <h1 class="text-5xl md:text-7xl font-extrabold mb-6">Stop Fighting Spreadsheets. <br><span class="gradient-text">Start Scaling Your Business.</span></h1>
+    <p class="text-xl text-slate-400 max-w-3xl mx-auto mb-10">We build high-performance, custom Excel applications and Google Sheets automation for the MSME and Corporate sectors. Expertly crafted in India for the Global stage.</p>
+    <div class="flex flex-col md:flex-row justify-center space-y-4 md:space-y-0 md:space-x-6">
+        <a href="https://wa.me/917989070733" target="_blank" class="px-8 py-4 bg-amber-500 text-black rounded-lg font-bold text-lg hover:scale-105 transition">Connect on WhatsApp</a>
+        <a href="https://calendar.app.google/bKCBQfxuMfgGPCth9" target="_blank" class="px-8 py-4 glass text-white rounded-lg font-bold text-lg hover:bg-white hover:text-black transition">Book Free Consultation</a>
+    </div>
+</section>
 
     <section id="services" class="max-w-7xl mx-auto px-8 py-20">
         <h2 class="text-3xl font-bold mb-12 text-center">Engineered Solutions</h2>
@@ -114,4 +114,5 @@
     </footer>
 
 </body>
+
 </html>
