Fix HTML structure and improve content layout

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="hidden md:flex space-x-8 text-sm font-medium">
             <a href="#services" class="hover:text-amber-500 transition">Solutions</a>
             <a href="#sectors" class="hover:text-amber-500 transition">Industries</a>
-            <a href="#contact" class="px-5 py-2 bg-amber-500 text-black rounded-full font-bold hover:bg-white transition">Get a Quote</a>
+            <a href="https://wa.me/917989070733" target="_blank" class="px-5 py-2 bg-amber-500 text-black rounded-full font-bold hover:bg-white transition">Get a Quote</a>
         </div>
     </nav>
 
@@ -108,7 +108,25 @@
         </div>
     </div>
 </section>
-
+<section id="contact" class="max-w-7xl mx-auto px-8 py-24 text-center">
+    <div class="glass p-12 rounded-3xl border border-amber-500/20">
+        <h2 class="text-4xl font-bold mb-6">Ready to Automate Your Workflow?</h2>
+        <p class="text-xl text-slate-400 mb-10 max-w-2xl mx-auto">
+            Whether you are a Jewellery MSME in India or a Global Corporate team, we build the tools you need to scale.
+        </p>
+        <div class="flex flex-col md:flex-row justify-center items-center gap-6">
+            <a href="https://wa.me/917989070733" class="flex items-center space-x-3 px-8 py-4 bg-green-600 text-white rounded-xl font-bold hover:bg-green-500 transition">
+                <i class="fab fa-whatsapp text-2xl"></i>
+                <span>Chat on WhatsApp</span>
+            </a>
+            <a href="https://calendar.app.google/bKCBQfxuMfgGPCth9" class="flex items-center space-x-3 px-8 py-4 glass text-white rounded-xl font-bold hover:bg-white hover:text-black transition">
+                <i class="far fa-calendar-alt text-2xl"></i>
+                <span>Book a Discovery Call</span>
+            </a>
+        </div>
+        <p class="mt-8 text-slate-500 text-sm italic">Expertise in Jewellery Stock ERP & Corporate Data Dashboards</p>
+    </div>
+</section>
     <footer class="max-w-7xl mx-auto px-8 py-12 border-t border-slate-800 text-center">
         <p class="text-slate-500">© 2026 myexcel.in | Built for efficiency.</p>
     </footer>
@@ -116,3 +134,4 @@
 </body>
 
 </html>
+
