--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
             Whether you are a Jewellery MSME in India or a Global Corporate team, we build the tools you need to scale.
         </p>
         <div class="flex flex-col md:flex-row justify-center items-center gap-6">
-            <a href="https://wa.me/917989070733" class="flex items-center space-x-3 px-8 py-4 bg-green-600 text-white rounded-xl font-bold hover:bg-green-500 transition">
+            <a href="https://wa.me/917989070733" target="_blank" class="flex items-center space-x-3 px-8 py-4 bg-green-600 text-white rounded-xl font-bold hover:bg-green-500 transition">
                 <i class="fab fa-whatsapp text-2xl"></i>
                 <span>Chat on WhatsApp</span>
             </a>
-            <a href="https://calendar.app.google/bKCBQfxuMfgGPCth9" class="flex items-center space-x-3 px-8 py-4 glass text-white rounded-xl font-bold hover:bg-white hover:text-black transition">
+            <a href="https://calendar.app.google/bKCBQfxuMfgGPCth9" target="_blank" class="flex items-center space-x-3 px-8 py-4 glass text-white rounded-xl font-bold hover:bg-white hover:text-black transition">
                 <i class="far fa-calendar-alt text-2xl"></i>
                 <span>Book a Discovery Call</span>
             </a>
@@ -134,4 +134,5 @@
 </body>
 
 </html>
+
 
