Refactor index.html for improved structure and content

--- a/index.html
+++ b/index.html
@@ -52,19 +52,111 @@
         </div>
     </section>
 
-    <section id="sectors" class="bg-slate-900/50 py-24">
-        <div class="max-w-7xl mx-auto px-8">
-            <h2 class="text-3xl font-bold mb-16 text-center">Tailored for Your Growth</h2>
-            <div class="flex flex-wrap justify-center gap-4">
-                <span class="px-6 py-3 glass rounded-full text-amber-500 border-amber-500/30">MSMEs</span>
-                <span class="px-6 py-3 glass rounded-full">Manufacturing</span>
-                <span class="px-6 py-3 glass rounded-full">Wholesale & Retail</span>
-                <span class="px-6 py-3 glass rounded-full">Chartered Accountants</span>
-                <span class="px-6 py-3 glass rounded-full">Corporate Analysts</span>
-                <span class="px-6 py-3 glass rounded-full text-amber-500 border-amber-500/30">Global Teams</span>
+<section id="msme-sectors" class="max-w-7xl mx-auto px-8 py-20 border-t border-slate-800">
+    <div class="text-center mb-16">
+        <h2 class="text-3xl font-bold mb-4">Tailored for Your Growth</h2>
+        <p class="text-slate-400">Custom Automation for every type of MSME</p>
+    </div>
+    <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+        <a href="https://wa.me/917989070733?text=I%20am%20interested%20in%20Manufacturing%20Automation" target="_blank" class="glass p-6 rounded-xl text-center hover:border-amber-500 transition group">
+            <i class="fas fa-industry text-2xl mb-3 text-slate-500 group-hover:text-amber-500"></i>
+            <div class="font-bold">Manufacturing</div>
+        </a>
+        <a href="https://wa.me/917989070733?text=I%20am%20interested%20in%20Wholesale%20Solutions" target="_blank" class="glass p-6 rounded-xl text-center hover:border-amber-500 transition group">
+            <i class="fas fa-truck-loading text-2xl mb-3 text-slate-500 group-hover:text-amber-500"></i>
+            <div class="font-bold">Wholesale</div>
+        </a>
+        <a href="https://wa.me/917989070733?text=I%20am%20interested%20in%20Retail%20Automation" target="_blank" class="glass p-6 rounded-xl text-center hover:border-amber-500 transition group">
+            <i class="fas fa-store text-2xl mb-3 text-slate-500 group-hover:text-amber-500"></i>
+            <div class="font-bold">Retail</div>
+        </a>
+        <a href="https://wa.me/917989070733?text=I%20am%20interested%20in%20CA%20Professional%20Services" target="_blank" class="glass p-6 rounded-xl text-center hover:border-amber-500 transition group">
+            <i class="fas fa-user-tie text-2xl mb-3 text-slate-500 group-hover:text-amber-500"></i>
+            <div class="font-bold">CA & Professionals</div>
+        </a>
+    </div>
+</section>
+ <section id="jewellery" class="bg-amber-500/5 py-24 border-y border-amber-500/10">
+    <div class="max-w-7xl mx-auto px-8">
+        <div class="text-center mb-16">
+            <h2 class="text-amber-500 font-bold text-4xl mb-4">The Jewellery Ecosystem</h2>
+            <p class="text-slate-300">End-to-end Inventory & Stock Management Solutions</p>
+        </div>
+
+        <div class="grid md:grid-cols-4 gap-6">
+            <div class="glass p-8 rounded-2xl border-t-2 border-amber-500">
+                <h4 class="font-bold text-xl mb-4">Retailers</h4>
+                <p class="text-sm text-slate-400">Barcode-ready billing, live stock images on mobile, and customer loyalty tracking.</p>
+            </div>
+            <div class="glass p-8 rounded-2xl border-t-2 border-amber-500">
+                <h4 class="font-bold text-xl mb-4">Wholesalers</h4>
+                <p class="text-sm text-slate-400">Bulk order management, party-wise credit (Udhaar) tracking, and multi-user access.</p>
+            </div>
+            <div class="glass p-8 rounded-2xl border-t-2 border-amber-500">
+                <h4 class="font-bold text-xl mb-4">Bullion</h4>
+                <p class="text-sm text-slate-400">Real-time metal rate integration, purity calculators, and daily position reports.</p>
+            </div>
+            <div class="glass p-8 rounded-2xl border-t-2 border-amber-500">
+                <h4 class="font-bold text-xl mb-4">Karigar/Workers</h4>
+                <p class="text-sm text-slate-400">Wastage & melting loss calculation, worker labor charges, and raw material issue/receive logs.</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+  <section id="jewellery" class="bg-amber-500/5 py-24 border-y border-amber-500/10">
+    <div class="max-w-7xl mx-auto px-8">
+        <div class="text-center mb-16">
+            <h2 class="text-amber-500 font-bold text-4xl mb-4">The Jewellery Ecosystem</h2>
+            <p class="text-slate-300">End-to-end Inventory & Stock Management Solutions</p>
+        </div>
+
+        <div class="grid md:grid-cols-4 gap-6">
+            <div class="glass p-8 rounded-2xl border-t-2 border-amber-500">
+                <h4 class="font-bold text-xl mb-4">Retailers</h4>
+                <p class="text-sm text-slate-400">Barcode-ready billing, live stock images on mobile, and customer loyalty tracking.</p>
+            </div>
+            <div class="glass p-8 rounded-2xl border-t-2 border-amber-500">
+                <h4 class="font-bold text-xl mb-4">Wholesalers</h4>
+                <p class="text-sm text-slate-400">Bulk order management, party-wise credit (Udhaar) tracking, and multi-user access.</p>
+            </div>
+            <div class="glass p-8 rounded-2xl border-t-2 border-amber-500">
+                <h4 class="font-bold text-xl mb-4">Bullion</h4>
+                <p class="text-sm text-slate-400">Real-time metal rate integration, purity calculators, and daily position reports.</p>
+            </div>
+            <div class="glass p-8 rounded-2xl border-t-2 border-amber-500">
+                <h4 class="font-bold text-xl mb-4">Karigar/Workers</h4>
+                <p class="text-sm text-slate-400">Wastage & melting loss calculation, worker labor charges, and raw material issue/receive logs.</p>
+            </div>
+        </div>
+    </div>
+</section>
+ <section class="max-w-7xl mx-auto px-8 py-20">
+    <div class="grid md:grid-cols-2 gap-12 items-center">
+        <div>
+            <h2 class="text-3xl font-bold mb-6">Corporate & Enterprise Solutions</h2>
+            <div class="space-y-6">
+                <div class="flex gap-4">
+                    <div class="mt-1"><i class="fas fa-database text-blue-500"></i></div>
+                    <div>
+                        <h5 class="font-bold text-white">Advanced SQL/Excel Integration</h5>
+                        <p class="text-slate-400">Automated data pipelines for Analysts and Managers.</p>
+                    </div>
+                </div>
+                <div class="flex gap-4">
+                    <div class="mt-1"><i class="fas fa-project-diagram text-blue-500"></i></div>
+                    <div>
+                        <h5 class="font-bold text-white">Google AppScript Automation</h5>
+                        <p class="text-slate-400">Connecting Sheets to CRM, Gmail, and external APIs.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="glass p-10 rounded-3xl border border-blue-500/20">
+            <h4 class="text-xl font-bold mb-4 text-blue-400">Designed for Decision Makers</h4>
+            <p class="text-slate-400">As an AVP of Business Development and MBA candidate, I build tools that don't just "store" data—they provide structural strategy and insight.</p>
+        </div>
+    </div>
+</section>   
 <section id="solutions" class="max-w-7xl mx-auto px-8 py-20">
     <div class="text-center mb-16">
         <h2 class="text-amber-500 font-mono tracking-widest uppercase text-sm mb-4">What We Build</h2>
@@ -134,5 +226,6 @@
 </body>
 
 </html>
+
 
 
